--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>BlackPink Website (ASG1)</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Asg1</h1>
+    <!-- HEADER -->
+        <header> 
+            <div class="logo-container">
+                <img src="logo.png" class="logo" alt="blackpink logo name" width="805" height="134">
+                <h1 class="logo-text">IN YOUR AREA</h1>
+                <img src="crown.jpg" class="crown"  alt="crown icon" >
+            </div>
+        </header>
+        <nav> 
+            <div class="container">    
+                <a href="#">HOME</a>  
+                <a href="#">ABOUT</a> 
+                <a href="#">DISCOGRAPHY</a> 
+                <a href="#">EVENTS</a>
+                <a href="#">CONTACT US</a>  
+            </div>
+        </nav>
+<!-- Main Content -->
+
     </body>
 </html>
