--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <header> 
             <div class="logo-container">
                 <img src="logo.png" class="logo" alt="blackpink logo name" width="805" height="134">
-                <h1 class="logo-text">IN YOUR AREA</h1>
+                <div class="text-box">
+                    <h1 class="logo-text">IN YOUR AREA</h1>
+                </div>
                 <img src="crown.jpg" class="crown"  alt="crown icon" >
             </div>
         </header>
