--- a/new_release.html
+++ b/new_release.html
@@ -38,8 +38,7 @@
         </div>
 
         <!-- RIGHT LARGE IMAGE -->
-        <iframe width="928" height="522" src="https://www.youtube.com/embed/CgCVZdcKcqY" title="BLACKPINK - ‘뛰어(JUMP)’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+        <iframe class="jump"width="928" height="522" src="https://www.youtube.com/embed/CgCVZdcKcqY" title="BLACKPINK - ‘뛰어(JUMP)’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 </body>
 
