added about page

--- a/new_release.html
+++ b/new_release.html
@@ -40,6 +40,12 @@
         <!-- RIGHT LARGE IMAGE -->
         <iframe class="jump"width="928" height="522" src="https://www.youtube.com/embed/CgCVZdcKcqY" title="BLACKPINK - ‘뛰어(JUMP)’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
+    <!-- bottom -->
+    <footer>
+        <div class="words">
+            </p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
