finish about page

--- a/about.html
+++ b/about.html
@@ -31,10 +31,18 @@
     <!-- Main Content -->
         <h2 class="about-title">MEMBERS</h2>
         <div class="photos-container">
-            <img src="jisoo.jpeg" class="jisoo-photo" alt="Jisoo photo" width="250">
-            <img src="jennie.jpeg" class="jennie-photo" alt="Jennie photo" width="290">
-            <img src="rose.jpeg" class="rose-photo" alt="Rosé photo" width="250">
-            <img src="lisa.jpeg" class="lisa-photo" alt="Lisa photo" width="280">
+            <a href="details.html">
+                <img src="jisoo.jpeg" class="jisoo-photo" alt="Jisoo photo" width="250">
+            </a>    
+            <a href="details.html">
+                <img src="jennie.jpeg" class="jennie-photo" alt="Jennie photo" width="290">
+            </a>
+            <a href="details.html">
+                <img src="rose.jpeg" class="rose-photo" alt="Rosé photo" width="250">
+            </a>
+            <a href="details.html">
+                <img src="lisa.jpeg" class="lisa-photo" alt="Lisa photo" width="280">
+            </a>
         </div>
         <div class="name">
             <p class="jisoo"><b>&lt;JISOO&gt;</b></p>
@@ -47,9 +55,7 @@
     <footer>
         <div class="words">
             </p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
-
         </div>
     </footer>
 </body>
-
 </html>
