--- a/new_release.html
+++ b/new_release.html
@@ -37,8 +37,14 @@
             <p class="date">2025-07-11</p>
         </div>
 
-        <!-- RIGHT LARGE IMAGE -->
-        <iframe class="jump"width="928" height="522" src="https://www.youtube.com/embed/CgCVZdcKcqY" title="BLACKPINK - ‘뛰어(JUMP)’ M/V" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <!-- video -->
+        <div class="jump-container">
+            <a href="https://www.youtube.com/watch?v=CgCVZdcKcqY" target="_blank">
+                <img src="https://img.youtube.com/vi/CgCVZdcKcqY/maxresdefault.jpg" class="jump-video"
+                    alt="BLACKPINK JUMP MV thumbnail">
+                <div class="play-button">▶</div>
+            </a>
+        </div>
     </section>
     <!-- bottom -->
     <footer>
