done details page

--- a/details.html
+++ b/details.html
@@ -33,41 +33,122 @@
     <!-- jisoo Content -->
     <div class="jisoo-section">
         <div class="jisoo-left">
-            <p><strong>Full name:</strong> Kim Ji-soo<br>
-                <strong>Birthday:</strong> January 3, 1995<br>
-                <strong>Nationality:</strong> South Korean<br>
-                <strong>Position:</strong> Lead Vocalist, Visual
+            <p>
+                <b>Full name:</b> Kim Ji-soo<br>
+                <b>Birthday:</b> January 3, 1995<br>
+                <b>Nationality:</b> South Korean<br>
+                <b>Position:</b> Lead Vocalist, Visual
             </p>
         </div>
         <img src="jisoo_profile.jpeg" class="jisoo-profile" alt="Jisoo profilephoto" width="300">
         <div class="jisoo-right">
-            <h2>JISOO</h2>
+            <h3 class="details-jisoo">JISOO</h3>
             <h3>Solo Songs</h3>
-            <ul>
+            <ul class="multi-col-list">
                 <li>Flower (2023)</li>
                 <li>All Eyes on Me (2023)</li>
+                <li>Earthquake (2025)</li>
+                <li>Your Love (2025)</li>
+                <li>TEARS (2025)</li>
+                <li>Hugs & Kisses (2025)</li>
             </ul>
         </div>
     </div>
     <!-- jennie Content -->
     <div class="jennie-section">
-        <div class="jennie-left">
-            <p><strong>Full name:</strong> Kim Ji-soo<br>
-                <strong>Birthday:</strong> January 3, 1995<br>
-                <strong>Nationality:</strong> South Korean<br>
-                <strong>Position:</strong> Lead Vocalist, Visual
+        <div class="jennie-right">
+            <p>
+                <b>Full name:</b> Jennie Kim<br>
+                <b>Birthday:</b> January 16, 1996<br>
+                <b>Nationality:</b> South Korean<br>
+                <b>Position:</b> Main Rapper, Lead Vocalist
             </p>
         </div>
         <img src="jennie_profile.jpeg" class="jennie-profile" alt="Jennie profilephoto" width="300">
-        <div class="jennie-right">
-            <h2>JENNIE</h2>
+        <div class="jennie-left">
+            <h3 class="details-jennie">JENNIE</h3>
             <h3>Solo Songs</h3>
-            <ul>
-                <li>Flower (2023)</li>
-                <li>All Eyes on Me (2023)</li>
+            <ul class="multi-col-list">
+                <li>Solo (2018)</li>
+                <li>You & Me (2023)</li>
+                <li>Mantra (2025)</li>
+                <li>ExtraL (feat. Doechii) (2025)</li>
+                <li>Love Hangover (feat. Dominic Fike) (2025)</li>
+                <li>Handlebars (feat. Dua Lipa) (2025)</li>
+                <li>like JENNIE (2025)</li>
+                <li>Seoul City (2025)</li>
+                <li>Starlight (2025)</li>
+                <li>SPOT! (with ZICO) (2025)</li>
             </ul>
         </div>
     </div>
+    </div>
+    <!-- rose Content -->
+    <div class="rose-section">
+        <div class="rose-left">
+            <p>
+                <b>Full Name:</b> Park Chae-young (Roseanne)<br>
+                <b>Birthday:</b> February 11, 1997<br>
+                <b>Nationality:</b> Korean-New Zealander<br>
+                <b>Position:</b> Main Vocalist, Lead Dancer
+            </p>
+        </div>
+        <img src="rose_profile.jpeg" class="rose-profile" alt="Rose profilephoto" width="300">
+        <div class="rose-right">
+            <h3 class="details-rose">ROSÉ</h3>
+            <h3>Solo Songs</h3>
+            <ul class="multi-col-list">
+                <li>On The Ground (2021)</li>
+                <li>Gone (2021)</li>
+                <li>6am (2024)</li>
+                <li>3am (2024)</li>
+                <li>Castaway (2024)</li>
+                <li>Keep Me Up (2024)</li>
+                <li>Number One Girl (2024)</li>
+                <li>Two Years (2024)</li>
+                <li>Toxic Till The End (2024)</li>
+                <li>Drinks or Coffee (2024)</li>
+                <li>Gameboy (2024)</li>
+                <li>Stay a Little Longer (2024)</li>
+                <li>Not the Same (2024)</li>
+                <li>Too Bad for Us (2024)</li>
+                <li>Call It the End (2024)</li>
+                <li>Dance All Night (2024)</li>
+                <li>Vampirehollie (CD-only, 2024)</li>
+                <li>APT. (with Bruno Mars) (2024)</li>
+            </ul>
+        </div>
+    </div>
+    <!-- rose Content -->
+    <div class="lisa-section">
+        <div class="lisa-right">
+            <p>
+                <b>Full name:</b> Lalisa Manobal<br>
+                <b>Birthday:</b> March 27, 1997<br>
+                <b>Nationality:</b> Thai<br>
+                <b>Position:</b> Main Dancer, Lead Rapper, Sub Vocalist, Maknae
+            </p>
+        </div>
+        <img src="lisa_profile.jpeg" class="lisa-profile" alt="Lisa profilephoto" width="300">
+        <div class="lisa-left">
+            <h3 class="details-lisa">LISA</h3>
+            <h3>Solo Songs</h3>
+            <ul class="multi-col-list">
+                <li>Lalisa (2021)</li>
+                <li>Money (2021)</li>
+                <li>SG (with DJ Snake, Ozuna & Megan Thee Stallion) (2021)</li>
+                <li>Rockstar (2024)</li>
+                <li>Moonlit Floor (Kiss Me) (2024)</li>
+                <li>Other tracks from Alter Ego (2025)</li>
+            </ul>
+        </div>
+    </div>
+    <!-- bottom -->
+    <footer>
+        <div class="words">
+            </p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
