created other pages

--- a/discography.html
+++ b/discography.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Release</title>
+    <title>Discography</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -29,29 +29,6 @@
         </div>
     </nav>
     <!-- Main Content -->
-    <section class="content-section">
-        <!-- LEFT SIDE -->
-        <div class="left-panel">
-            <img src="jump logo.png" class="jump-logo" alt="blackpink new song logo">
-            <img src="jump.jpeg" class="jump-cover" alt="blackpink new song cover image">
-            <p class="date">2025-07-11</p>
-        </div>
-
-        <!-- video -->
-        <div class="jump-container">
-            <a href="https://www.youtube.com/watch?v=CgCVZdcKcqY" target="_blank">
-                <img src="https://img.youtube.com/vi/CgCVZdcKcqY/maxresdefault.jpg" class="jump-video"
-                    alt="BLACKPINK JUMP MV thumbnail">
-                <div class="play-button">▶</div>
-            </a>
-        </div>
-    </section>
-    <!-- bottom -->
-    <footer>
-        <div class="words">
-            </p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
-        </div>
-    </footer>
 </body>
 
 </html>
