done discography page

--- a/discography.html
+++ b/discography.html
@@ -29,6 +29,73 @@
         </div>
     </nav>
     <!-- Main Content -->
+    <h1 class="discography-title">DISCOGRAPHY</h1>
+
+    <div class="discography-grid">
+
+        <div class="album">
+            <img class="album-photo" src="jump album.jpeg" alt="JUMP">
+            <p><b>JUMP</b>(2024)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="born pink album.jpeg" alt="Born Pink">
+            <p><b>Born Pink</b>(2022)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="pink venom album.jpeg" alt="Pink Venom">
+            <p><b>Pink Venom</b>(2022)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="the album.jpeg" alt="The Album">
+            <p><b>The Album</b>(2020)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="ice cream album.jpeg" alt="Ice Cream">
+            <p><b>Ice Cream</b>(2020)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="how you like that album.jpeg" alt="How You Like That">
+            <p><b>How You Like That</b>(2020)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="kill this love album.jpeg" alt="Kill This Love">
+            <p><b>Kill This Love</b>(2019)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="square up album.jpeg" alt="Square Up">
+            <p><b>Square Up</b>(2018)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="as if its your last.jpeg" alt="As If It's Your Last">
+            <p><b>As If It's Your Last</b>(2017)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="square two album.jpeg" alt="Square Two">
+            <p><b>Square Two</b>(2016)</p>
+        </div>
+
+        <div class="album">
+            <img class="album-photo" src="square one album.jpeg" alt="Square One">
+            <p><b>Square One</b>(2016)</p>
+        </div>
+
+    </div>
+    <a href="music1.html" class="button">View Top 5 Songs</a>
+    <!-- bottom -->
+    <footer>
+        <div class="words">
+            </p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
