done music1 page

--- a/details.html
+++ b/details.html
@@ -29,7 +29,8 @@
         </div>
     </nav>
     <!-- Main Content -->
-    <button class="back_button" onclick="window.location.href='about.html'">BACK</button>
+    <div>
+        <button class="back_button" onclick="window.location.href='about.html'">BACK</button>
     <!-- jisoo Content -->
     <div class="jisoo-section">
         <div class="jisoo-left">
