done music2 page

--- a/music1.html
+++ b/music1.html
@@ -35,24 +35,25 @@
     </div>
     <div class="song-container">
         <!-- Song Info -->
-    <div class="song-info">
-        <button class="m1-next-button" onclick="window.location.href='music2.html'">NEXT</button>
-        <div class="song-title-box">
-            <h2>1. KILL THIS LOVE</h2>
+        <div class="song-info">
+            <button class="m1-next-button" onclick="window.location.href='music2.html'">NEXT</button>
+            <div class="song-title-box">
+                <h2>1. KILL THIS LOVE</h2>
+            </div>
+            <ul class="description">
+                <li>A fierce breakup anthem featuring bold horns and explosive choreography.</li>
+            </ul>
+            <button class="m1-back-button" onclick="window.location.href='discography.html'">BACK</button>
         </div>
-        <ul class="description">
-            <li>A fierce breakup anthem featuring bold horns and explosive choreography.</li>
-        </ul>
-        <button class="m1-back-button" onclick="window.location.href='discography.html'">BACK</button>
-    </div>
 
-    <!-- Video -->
-    <div class="kill-this-love-container">
-        <a href="https://youtu.be/2S24-y0Ij3Y" target="_blank">
-            <img src="https://img.youtube.com/vi/2S24-y0Ij3Y/maxresdefault.jpg" class="kill-this-love-video" alt="BLACKPINK KILL THIS LOVE MV thumbnail">
-            <div class="play-button">▶</div>
-        </a>
-    </div>
+        <!-- Video -->
+        <div class="kill-this-love-container">
+            <a href="https://youtu.be/2S24-y0Ij3Y" target="_blank">
+                <img src="https://img.youtube.com/vi/2S24-y0Ij3Y/maxresdefault.jpg" class="kill-this-love-video"
+                    alt="BLACKPINK KILL THIS LOVE MV thumbnail">
+                <div class="play-button">▶</div>
+            </a>
+        </div>
     </div>
     <!-- bottom -->
     <footer>
