started on events page

--- a/events.html
+++ b/events.html
@@ -29,5 +29,12 @@
         </div>
     </nav>
     <!-- Main Content -->
-    
+    <img class="events_image" src="events_img.jpeg" alt="concert image">
+    <section class="tour-container">
+
+        <div class="tour-row">
+            <div class="city">NEW YORK</div>
+            <div class="dates">2025. 07. 26 SAT 8PM / 2025. 07. 23 SUN 8PM</div>
+            <div class="status soldout">SOLD OUT</div>
+        </div>
         
