--- a/events.html
+++ b/events.html
@@ -60,3 +60,4 @@
             <div class="dates">2026. 02. 21 SAT / 2026. 02. 22 SUN</div>
             <button class="status" data-msg="Kuala Lumpur shows are still available!">UPCOMING</button>
         </div>
+        </section>
