--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EVENTS</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="script.js"></script>
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -32,19 +32,19 @@
     <section class="tour-container">
         <!-- new york part -->
         <div class="tour-row">
-            <div class="country">NEW YORK</div>
+            <div class="country"><b>NEW YORK</b></div>
             <div class="dates">2025. 07. 26 SAT 8PM / 2025. 07. 23 SUN 8PM</div>
             <button class="status" data-msg="Sorry, New York shows are sold out!">SOLD OUT</button>
         </div>
         <!-- singapore part -->
         <div class="tour-row">
-            <div class="country">SINGAPORE</div>
+            <div class="country"><b>SINGAPORE</b></div>
             <div class="dates">2025. 11. 28 FRI / 2025. 11. 29 SAT / 2025. 11. 30 SUN</div>
             <button class="status" data-msg="Sorry, Singapore shows are sold out!">SOLD OUT</button>
         </div>
         <!-- hong kong part -->
         <div class="tour-row">
-            <div class="country">HONG KONG</div>
+            <div class="country"><b>HONG KONG</b></div>
             <div class="dates">
                 2026. 01. 24 SAT /
                 2026. 01. 25 SUN /
@@ -54,7 +54,7 @@
         </div>
         <!-- KUALA LUMPUR part -->
         <div class="tour-row">
-            <div class="country">KUALA LUMPUR</div>
+            <div class="country"><b>KUALA LUMPUR</b></div>
             <div class="dates">2026. 02. 21 SAT / 2026. 02. 22 SUN</div>
             <button class="status" data-msg="Kuala Lumpur shows are still available!">UPCOMING</button>
         </div>
@@ -65,3 +65,6 @@
             </p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
+    </body>
+    </html>
