--- a/events.html
+++ b/events.html
@@ -65,6 +65,7 @@
             <p>BLACKPINK&nbsp; &copy;2025. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
